--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Klara's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr/>
-    <h3><a href=".//public/movie-rankingk.html">Movie Ranking Project</a></h3>
-    <img src=".//assets/images/movie-rankingk.png" height="200" alt="movie-ranking"/>
-    <h3><a href="../public/birthday-invitek.html">Birthday Invite Project</a></h3>
-    <img src="../assets/images/birthday-invitek.png" height="200" alt="birthday-invite"/>
+    <h3><a href="./public/movie-rankingk.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/movie-rankingk.png" height="200" alt="movie-ranking"/>
+    <h3><a href="./public/birthday-invitek.html">Birthday Invite Project</a></h3>
+    <img src="./assets/images/birthday-invitek.png" height="200" alt="birthday-invite"/>
     <hr/>
     <a href="public/about.html">About Me</a> 
     <a href="public/birthday-invite.html">Contact Me</a>
