--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="./assets/images/birthday-invitek.png" height="200" alt="birthday-invite"/>
     <hr/>
     <a href="public/about.html">About Me</a> 
-    <a href="public/birthday-invite.html">Contact Me</a>
+    <a href="public/contact.html">Contact Me</a>
 </body>
 </html>
     
