--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Klara's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr/>
-    <h3><a href="./public/movie-rankingk.png">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-rankingk.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-rankingk.png" height="200" alt="movie-ranking"/>
     <h3><a href="./public/birthday-invitek.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invitek.png" height="200" alt="birthday-invite"/>
